--- a/form-element-mixin.html
+++ b/form-element-mixin.html
@@ -16,7 +16,8 @@
            */
           required: {
             type: Boolean,
-            reflectToAttribute: true
+            reflectToAttribute: true,
+            notify: true
           },
 
           /**
@@ -24,7 +25,8 @@
            */
           invalid: {
             type: Boolean,
-            reflectToAttribute: true
+            reflectToAttribute: true,
+            notify: true
           },
 
           /**
@@ -32,7 +34,8 @@
            */
           disabled: {
             type: Boolean,
-            reflectToAttribute: true
+            reflectToAttribute: true,
+            notify: true
           },
 
           /**
@@ -46,7 +49,8 @@
            * value of the input
            */
           value: {
-            type: Object
+            type: Object,
+            notify: true
           },
 
           /**
@@ -124,6 +128,6 @@
       }
     }
   }
-  
+
   window.FormElementMixin = FormElementMixin;
 </script>
