--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -11,77 +11,89 @@
         position: relative;
         box-sizing: content-box;
         --dropdown-tip-size: 0.3em;
-        --input-color: #d5d5d5;
-        --input-background: #252525;
-        --input-disabled-background: transparent;
-        --input-disabled-color: currentColor;
+
+        --input-color: currentColor;
+        --input-background: transparent;
+        --input-border: thin solid transparent;
+        --input-padding: 0.2em;
+        --input-border-radius: 0.25em;
+        --input-align: center;
+        --input-cursor: pointer;
+        --input-transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
+
         --input-focus-color: #f1f1f1;
         --input-focus-background: var(--primary-color, #394FE8);
-        --input-invalid-color: #e83953;
+        --input-focus-border: thin solid transparent;
+
+        --input-placeholder-color: currentColor;
+        --input-placeholder-opacity: 0.75;
+
         --input-selection-color: var(--input-focus-color);
         --input-selection-background: rgba(255,255,255,0.1);
-        --input-placeholder: {
-          opacity: 0.75;
-        };
-        /* initial mixins */
-        --input-style: {
-          padding: 0.2em;
-          border-radius: 0.25em;
-          text-align: center;
-          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
-        };
-        --input-focus: {
-          outline: none;
-          color: var(--input-focus-color);
-          background: var(--input-focus-background);
-        };
+
+        --input-picker-color: #d5d5d5;
+        --input-picker-background: #252525;
+        --input-picker-padding: 0.25em;
+        --input-picker-border-radius: 0.5em;
+        --input-picker-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 3px -2px rgba(0, 0, 0, 0.4);
+
+        --input-disabled-color: currentColor;
+        --input-disabled-background: transparent;
+        --input-disabled-font-style: italic;
+        --input-disabled-opacity: 1;
+
+        --input-invalid-color: #e83953;
+        --input-invalid-background: transparent;
+        --input-invalid-border: thin dotted #e83953);
+
+        --input-icon-border-radius: 0.25em;
+        --input-icon-padding: 0.5em;
+        --input-icon-height: 1em;
+        --input-icon-width: 1em;
+        --input-icon-background: transparent;
+
         --input-disabled: {
-          color: var(--input-disabled-color);
-          background: var(--input-disabled-background);
           font-weight: lighter;
           cursor: default;
         };
-        --input-picker: {
-          box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14),
-                      0 1px 8px 0 rgba(0, 0, 0, 0.12),
-                      0 3px 3px -2px rgba(0, 0, 0, 0.4);
-          border-radius: 0.5em;
-        };
+
         --input-icon: {
-          border-radius: 0.25em;
-          padding: 0.5em;
-          height: 1em;
-          width: 1em;
-          background: transparent;
           transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), border-color 250ms cubic-bezier(0.6, 1, 0.2, 1);
         };
-        --input-invalid: {
-          border-color: var(--input-invalid-color);
-        };
+
       }
 
       :host(:focus) {
         outline: none;
       }
 
+      :host([disabled]) {
+        pointer-events: none;
+      }
+
       select,
       input {
         display: inline-flex;
         align-items: center;
-        line-height: normal;
-        outline: none;
-        font-family: inherit;
-        font-size: inherit;
         -webkit-background-clip: padding-box;
         background-clip: padding-box;
-        text-align: center;
-        cursor: pointer;
+        box-sizing: border-box;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+        font-style: inherit;
+        outline: none;
+        line-height: normal;
+        color: var(--input-color);
+        background: var(--input-background);
+        border-radius: var(--input-border-radius);
+        transition: var(--input-transition);
+        border: var(--input-border);
+        padding: var(--input-padding);
         @apply --input-style;
-        padding: 0.2em;
       }
-      input {
-        border: thin solid transparent;
-      }
+
+      button,
       select {
         -moz-appearance: none;
         -webkit-appearance: none;
@@ -91,49 +103,61 @@
         text-align-last: center;
         background: transparent;
         background-image: none;
-      }
-      select:focus,
-      select:hover,
-      input:hover {
-        outline: none;
-        @apply --input-focus;
-      }
-      select:focus option,
-      select option {
-        outline: none;
-        font-family: inherit;
-        color: var(--input-color);
-        background: var(--input-background);
-      }
-      :host([required]) input:invalid {
-        border-width: thin;
-        border-style: solid;
-        @apply --input-invalid;
-      }
-      input[disabled] {
-        @apply --input-disabled;
-      }
-      button {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        cursor: pointer;
-        display: inline-flex;
-        background: transparent;
-        color: inherit;
-        font-family: inherit;
-        font-size: inherit;
         border-width: 0;
-        padding: 0;
-        box-sizing: content-box;
       }
-      button:focus {
+
+      select:focus,
+      button:focus,
+      input:focus {
         outline: none;
       }
+
       button > * {
         pointer-events: none;
       }
+
+      select:focus,
+      select:hover,
+      input:hover {
+        color: var(--input-focus-color);
+        background: var(--input-focus-background);
+        border: var(--input-focus-border);
+        @apply --input-focus;
+      }
+
+      select:focus option,
+      select option {
+        color: var(--input-color);
+        background: var(--input-background);
+        outline: none;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+      }
+
+      :host([required]) input:invalid {
+        color: var(--input-invalid-color);
+        background: var(--input-invalid-background);
+        border: var(--input-invalid-border);
+        @apply --input-invalid;
+      }
+
+      select[disabled],
+      button[disabled],
+      input[disabled] {
+        color: var(--input-disabled-color);
+        background: var(--input-disabled-background);
+        font-style: var(--input-disabled-font-style);
+        opacity: var(--input-disabled-opacity);
+        @apply --input-disabled;
+      }
       .icon {
+        color: inherit;
+        border-radius: var(--input-icon-border-radius);
+        padding: var(--input-icon-padding);
+        height: var(--input-icon-height);
+        width: var(--input-icon-width);
+        background: var(--input-icon-background);
         @apply --input-icon;
         flex-shrink: 0;
         border: thin solid transparent;
@@ -149,6 +173,7 @@
       .icon[active],
       .icon:hover {
         border-color: var(--input-focus-background);
+        outline: none;
         @apply --input-focus;
       }
       .icon:focus {
