--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -16,7 +16,7 @@
         --input-background: transparent;
         --input-border: thin solid transparent;
         --input-padding: 0.3em;
-        --input-border-radius: 0.25em;
+        --input-border-radius: 0.3em;
         --input-align: center;
         --input-cursor: pointer;
         --input-transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
@@ -71,6 +71,18 @@
         pointer-events: none;
       }
 
+      button,
+      select {
+        -moz-appearance: none;
+        -webkit-appearance: none;
+        appearance: none;
+        border-style: none;
+        text-align-last: center;
+        background-image: none;
+        border-width: 0;
+      }
+
+      button,
       select,
       input {
         display: inline-flex;
@@ -93,18 +105,6 @@
         @apply --input-style;
       }
 
-      button,
-      select {
-        -moz-appearance: none;
-        -webkit-appearance: none;
-        appearance: none;
-        color: currentColor;
-        border-style: none;
-        text-align-last: center;
-        background: transparent;
-        background-image: none;
-        border-width: 0;
-      }
 
       select:focus,
       button:focus,
@@ -159,6 +159,7 @@
         width: var(--input-icon-width);
         background: var(--input-icon-background);
         @apply --input-icon;
+        box-sizing: content-box;
         flex-shrink: 0;
         border: thin solid transparent;
       }
@@ -167,17 +168,20 @@
         width: 100%;
         fill: currentColor;
       }
-      :host(:hover) .icon.switch:focus,
-      .icon:not(.switch):focus,
-      .icon:active,
-      .icon[active],
-      .icon:hover {
-        border-color: var(--input-focus-background);
-        outline: none;
-        @apply --input-focus;
-      }
       .icon:focus {
         border-color: var(--input-focus-background);
+        background: transparent;
+        outline: none;
+      }
+      :host(:hover) .icon.switch:focus,
+      .icon:hover,
+      .icon:not(.switch):focus,
+      .icon:active,
+      .icon[active] {
+        color: var(--input-focus-color);
+        background: var(--input-focus-background);
+        border: var(--input-focus-border);
+        @apply --input-focus;
         outline: none;
       }
       select:focus::-ms-value {
