--- a/overlay-picker-mixin.html
+++ b/overlay-picker-mixin.html
@@ -104,9 +104,9 @@
         `;
       }
 
-      static get styleContent() {
+      static get styleTemplate() {
         return `
-          ${super.styleContent || ''}
+          ${super.styleTemplate || ''}
           #overlay {
             display: -webkit-inline-flex;
             display: -ms-inline-flexbox;
