--- a/input-pattern.html
+++ b/input-pattern.html
@@ -3,7 +3,7 @@
 
 <script>
   /**
-   * mixin to extend an element that includes an native input to be wrapped. The pattern is using `input-shared-style` to unify the style between different inputs and should resize according to its properties and input.
+   * Mixin to extend an element that includes a native input to be wrapped. The pattern is using `input-shared-style` to unify the style between different inputs and should resize according to its properties and input.
    *
    * @appliesMixin FormElementMixin
    *
@@ -65,7 +65,8 @@
       }
 
       /**
-      * @overwrite this input-template is suposed to be overwritten to a custon implementation
+      * @overwrite
+      * this input-template is suposed to be overwritten to a custon implementation
       */
       static get inputTemplate() {
         return `
