--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -80,6 +80,7 @@
       ::placeholder {
         color: var(--input-placeholder-color, inherit);
         opacity: var(--input-placeholder-opacity, 0.75);
+        text-align: var(--input-placeholder-allign, center);
         @apply --input-placeholder;
       }
       ::-moz-selection {
