--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -20,6 +20,7 @@
         font-style: inherit;
         outline: none;
         line-height: normal;
+        vertical-align: inherit;
         cursor: var(--input-cursor, initial);
         color: var(--input-color, inherit);
         background: var(--input-background, transparent);
