--- a/input-pattern.html
+++ b/input-pattern.html
@@ -180,7 +180,7 @@
         this._checkInput = this._checkInput.bind(this);
         this._checkKeycode = this._checkKeycode.bind(this);
         this._addEventListeners();
-        requestAnimationFrame(this.resize.bind(this));
+        setTimeout(this.resize.bind(this), 0);
       }
 
       disconnectedCallback() {
@@ -299,7 +299,7 @@
        * called automatically when static `_minWidthString` changes, but can called manually to resize the minwidth of the input, when the input is for example initially hidden
        */
       resize() {
-        if (this._minSizeJob) {
+        if (this._minSizeJob || !this._minWidth) {
           return;
         }
 
