--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -10,18 +10,19 @@
         -webkit-user-select: none; -moz-user-select: none; -ms-user-select: none; user-select: none;
         position: relative;
         box-sizing: content-box;
-        --dropdown-tip-size: 0.3em;
 
         --input-color: currentColor;
         --input-background: transparent;
         --input-border-width: thin;
         --input-border-style: dotted;
-        --input-border-color: transparent;
-        --input-padding: 0.3em;
-        --input-border-radius: 0.3em;
+        --input-border-color: rgba(0,0,0,0.25);
+        --input-padding: 0.2em;
+        --input-border-radius: 0.25em;
         --input-align: center;
         --input-cursor: pointer;
-        --input-transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), color 50ms linear;
+        --input-transition-duration: 50ms, 250ms;
+        --input-transition-property: color, background;
+        --input-transition-timing-function: cubic-bezier(0.6, 1, 0.2, 1);
 
         --input-focus-color: #f1f1f1;
         --input-focus-background: var(--primary-color, #394FE8);
@@ -59,7 +60,6 @@
 
         --input-disabled: {
           font-weight: lighter;
-          cursor: default;
         };
 
         --input-icon: {
@@ -103,7 +103,9 @@
         color: var(--input-color);
         background: var(--input-background);
         border-radius: var(--input-border-radius);
-        transition: var(--input-transition);
+        transition-duration: var(--input-transition-duration);
+        transition-timing-function: var(--input-transition-timing-function);
+        transition-property: var(--input-transition-property);
         border-width: var(--input-border-width);
         border-style: var(--input-border-style);
         border-color: var(--input-border-color);
@@ -159,6 +161,7 @@
         @apply --input-disabled;
         pointer-events: none;
       }
+
       .icon {
         color: inherit;
         border-radius: var(--input-icon-border-radius);
@@ -171,16 +174,19 @@
         flex-shrink: 0;
         border: thin solid transparent;
       }
+
       .icon > svg {
         height: 100%;
         width: 100%;
         fill: currentColor;
       }
+
       .icon:focus {
         border-color: var(--input-focus-background);
         background: transparent;
         outline: none;
       }
+
       :host(:hover) .icon.switch:focus,
       .icon:hover,
       .icon:not(.switch):focus,
@@ -193,12 +199,15 @@
         @apply --input-focus;
         outline: none;
       }
+
       select:focus::-ms-value {
         background: transparent;
       }
+
       select::-ms-expand {
         display: none;
       }
+
       ::-webkit-input-edit-text,
       ::-webkit-input-placeholder,
       ::-webkit-inner-spin-button,
@@ -208,6 +217,7 @@
         color: currentColor;
         cursor: pointer;
       }
+
       ::-webkit-input-placeholder {
         @apply --input-placeholder;
       }
@@ -215,30 +225,63 @@
       ::-webkit-clear-button {
         mix-blend-mode: luminosity;
       }
+
       ::-moz-selection {
         color: inherit;
         background: transparent;
       }
+
       :focus::-moz-selection {
         color: var(--input-selection-color);
         background: var(--input-selection-background);
       }
+
       ::selection {
         color: inherit;
         background: transparent;
       }
+
       :focus::selection {
         color: var(--input-selection-color);
         background: var(--input-selection-background);
       }
+
       ::-moz-focus-inner {
         border: 0;
         padding: 0;
       }
+
       ::-moz-focusring {
         color: transparent !important;
         text-shadow: 0 0 0 var(--input-focus-color, #000);
       }
+
+      #picker {
+        color: var(--input-picker-color);
+        background: var(--input-picker-background);
+        border-radius: var(--input-picker-border-radius);
+        box-shadow: var(--input-picker-box-shadow);
+        @apply --input-picker;
+        display: inline-flex;
+        flex-flow: column nowrap;
+        padding: 0;
+        margin: 0;
+      }
+
+      #picker[horizontal] {
+        flex-flow: row nowrap;
+      }
+
+      #picker > * {
+        color: var(--input-picker-color);
+        background: var(--input-picker-background);
+        padding: var(--input-picker-padding);
+        border-radius: var(--input-picker-border-radius);
+        box-shadow: none !important;
+        box-sizing: border-box;
+        flex-shrink: 0;
+      }
+
       [hidden] {
         display: none !important;
       }
