--- a/input-picker-shared-style.html
+++ b/input-picker-shared-style.html
@@ -11,69 +11,22 @@
         position: relative;
         box-sizing: content-box;
 
-        --input-color: currentColor;
-        --input-background: transparent;
-        --input-border-width: thin;
-        --input-border-style: dotted;
-        --input-border-color: rgba(0,0,0,0.25);
-        --input-padding: 0.2em;
-        --input-border-radius: 0.25em;
-        --input-align: center;
         --input-cursor: pointer;
-        --input-transition-duration: 50ms, 250ms;
-        --input-transition-property: color, background;
-        --input-transition-timing-function: cubic-bezier(0.6, 1, 0.2, 1);
-
         --input-focus-color: #f1f1f1;
         --input-focus-background: var(--primary-color, #394FE8);
-        --input-focus-border-style: dotted;
-        --input-focus-border-color: transparent;
-
-        --input-placeholder-color: currentColor;
-        --input-placeholder-opacity: 0.75;
-
-        --input-selection-color: var(--input-focus-color);
-        --input-selection-background: rgba(255,255,255,0.5);
-
-        --input-picker-color: #d5d5d5;
+        --input-picker-color: #e5e5e5;
         --input-picker-background: #252525;
-        --input-picker-padding: 0.25em;
         --input-picker-border-radius: 0.5em;
+        --input-picker-padding: 0.25em;
         --input-picker-box-shadow: 0 3px 4px 0 rgba(0, 0, 0, 0.14), 0 1px 8px 0 rgba(0, 0, 0, 0.12), 0 3px 3px -2px rgba(0, 0, 0, 0.4);
-
-        --input-disabled-color: currentColor;
-        --input-disabled-background: transparent;
-        --input-disabled-font-style: oblique;
-        --input-disabled-opacity: 0.9;
-
-        --input-invalid-color: #e83953;
-        --input-invalid-background: transparent;
-        --input-invalid-border: thin dotted #e83953);
-
         --input-icon-border-radius: 0.3em;
         --input-icon-padding: 0.5em;
         --input-icon-height: 1em;
         --input-icon-width: 1em;
         --input-icon-background: transparent;
-
-        --inner-input-focus-background: rgba(0,0,0,0.08);
-
         --input-disabled: {
           font-weight: lighter;
         };
-
-        --input-icon: {
-          transition: background 250ms cubic-bezier(0.6, 1, 0.2, 1), border-color 250ms cubic-bezier(0.6, 1, 0.2, 1);
-        };
-
-      }
-
-      :host(:focus) {
-        outline: none;
-      }
-
-      :host([disabled]) {
-        pointer-events: none;
       }
 
       button,
@@ -81,84 +34,12 @@
         -moz-appearance: none;
         -webkit-appearance: none;
         appearance: none;
-        text-align-last: center;
+        text-align-last: var(--input-align, center);
         background-image: none;
-        border-color: transparent;
-      }
-
-      button,
-      select,
-      input {
-        display: inline-flex;
-        align-items: center;
-        -webkit-background-clip: padding-box;
-        background-clip: padding-box;
-        box-sizing: border-box;
-        font-family: inherit;
-        font-size: inherit;
-        font-weight: inherit;
-        font-style: inherit;
-        outline: none;
-        line-height: normal;
-        color: var(--input-color);
-        background: var(--input-background);
-        border-radius: var(--input-border-radius);
-        transition-duration: var(--input-transition-duration);
-        transition-timing-function: var(--input-transition-timing-function);
-        transition-property: var(--input-transition-property);
-        border-width: var(--input-border-width);
-        border-style: var(--input-border-style);
-        border-color: var(--input-border-color);
-        padding: var(--input-padding);
-        cursor: var(--input-cursor);
-        @apply --input-style;
-      }
-
-      select:focus,
-      button:focus,
-      input:focus {
-        outline: none;
+        border: thin solid transparent;
       }
 
       button > * {
-        pointer-events: none;
-      }
-
-      select:focus,
-      select:hover,
-      input:hover {
-        color: var(--input-focus-color);
-        background: var(--input-focus-background);
-        border-style: var(--input-focus-border-style);
-        border-color: var(--input-focus-border-color);
-        @apply --input-focus;
-      }
-
-      select:focus option,
-      select option {
-        color: var(--input-color);
-        background: var(--input-background);
-        outline: none;
-        font-family: inherit;
-        font-size: inherit;
-        font-weight: inherit;
-      }
-
-      :host([required]) input:invalid {
-        color: var(--input-invalid-color);
-        background: var(--input-invalid-background);
-        border: var(--input-invalid-border);
-        @apply --input-invalid;
-      }
-
-      select[disabled],
-      button[disabled],
-      input[disabled] {
-        color: var(--input-disabled-color);
-        background: var(--input-disabled-background);
-        font-style: var(--input-disabled-font-style);
-        opacity: var(--input-disabled-opacity);
-        @apply --input-disabled;
         pointer-events: none;
       }
 
@@ -169,10 +50,13 @@
         height: var(--input-icon-height);
         width: var(--input-icon-width);
         background: var(--input-icon-background);
+        transition-duration: var(--input-transition-duration, 250ms);
+        transition-timing-function: var(--input-transition-timing-function, cubic-bezier(0.6, 1, 0.2, 1));
         @apply --input-icon;
         box-sizing: content-box;
         flex-shrink: 0;
         border: thin solid transparent;
+        transition-property: background-color, border-color;
       }
 
       .icon > svg {
@@ -193,73 +77,22 @@
       .icon:active,
       .icon[active] {
         color: var(--input-focus-color);
-        background: var(--input-focus-background);
-        border-style: var(--input-focus-border-style);
-        border-color: var(--input-focus-border-color);
+        background-color: var(--input-focus-background);
+        border-width: var(--input-border-width, thin);
+        border-style: solid;
+        border-color: var(--input-focus-background);
         @apply --input-focus;
         outline: none;
       }
 
-      select:focus::-ms-value {
-        background: transparent;
-      }
-
-      select::-ms-expand {
-        display: none;
-      }
-
-      ::-webkit-input-edit-text,
-      ::-webkit-input-placeholder,
-      ::-webkit-inner-spin-button,
-      ::-webkit-outer-spin-button,
-      ::-webkit-search-cancel-button,
-      ::-webkit-clear-button {
-        color: currentColor;
-        cursor: pointer;
-      }
-
-      ::-webkit-input-placeholder {
-        @apply --input-placeholder;
-      }
-      ::-webkit-search-cancel-button,
-      ::-webkit-clear-button {
-        mix-blend-mode: luminosity;
-      }
-
-      ::-moz-selection {
-        color: inherit;
-        background: transparent;
-      }
-
-      :focus::-moz-selection {
-        color: var(--input-selection-color);
-        background: var(--input-selection-background);
-      }
-
-      ::selection {
-        color: inherit;
-        background: transparent;
-      }
-
-      :focus::selection {
-        color: var(--input-selection-color);
-        background: var(--input-selection-background);
-      }
-
-      ::-moz-focus-inner {
-        border: 0;
-        padding: 0;
-      }
-
-      ::-moz-focusring {
-        color: transparent !important;
-        text-shadow: 0 0 0 var(--input-focus-color, #000);
+      #picker,
+      #picker > * {
+        color: var(--input-picker-color);
+        background-color: var(--input-picker-background);
+        border-radius: var(--input-picker-border-radius);
       }
 
       #picker {
-        color: var(--input-picker-color);
-        background: var(--input-picker-background);
-        border-radius: var(--input-picker-border-radius);
         box-shadow: var(--input-picker-box-shadow);
         @apply --input-picker;
         display: inline-flex;
@@ -273,10 +106,7 @@
       }
 
       #picker > * {
-        color: var(--input-picker-color);
-        background: var(--input-picker-background);
         padding: var(--input-picker-padding);
-        border-radius: var(--input-picker-border-radius);
         box-shadow: none !important;
         box-sizing: border-box;
         flex-shrink: 0;
