--- a/input-shared-style.html
+++ b/input-shared-style.html
@@ -12,6 +12,35 @@
       :host(:focus) {
         outline: none;
       }
+      [hidden] {
+        display: none !important;
+      }
+
+      /**
+       * general input style
+       */
+      input,
+      #minsize,
+      #size,
+      #input {
+        vertical-align: inherit;
+        min-width: inherit;
+        max-width: inherit;
+        border-style: var(--input-border-style, dotted);
+        border-width: var(--input-border-width, thin);
+        border-color: var(--input-border-color, rgba(0,0,0,0.25));
+      }
+
+      button,
+      select {
+        border: thin solid transparent;
+      }
+
+      button,
+      input,
+      select,
+      #minsize,
+      #size,
       #input {
         overflow: visible;
         font-family: inherit;
@@ -20,72 +49,125 @@
         font-style: inherit;
         outline: none;
         line-height: normal;
-        vertical-align: inherit;
         cursor: var(--input-cursor, initial);
         color: var(--input-color, inherit);
-        background: var(--input-background, transparent);
+        background-color: var(--input-background, transparent);
         transition-duration: var(--input-transition-duration, 250ms);
         transition-timing-function: var(--input-transition-timing-function, cubic-bezier(0.6, 1, 0.2, 1));
-        transition-property: var(--input-transition-property, background);
+        transition-property: var(--input-transition-property, background-color);
         text-align: var(--input-align, center);
-        padding: var(--input-padding, 0.2em);
+        padding: var(--input-padding, 0.2em 0.3em);
         border-radius: var(--input-border-radius, 0.25em);
-        border-width: var(--input-border-width, thin);
-        border-style: var(--input-border-style, dotted);
-        border-color: var(--input-border-color, rgba(0,0,0,0.25));
         @apply --input-style;
         box-sizing: border-box;
         -webkit-background-clip: padding-box;
         background-clip: padding-box;
         margin: 0;
       }
+
+      /**
+       * focus & hover
+       */
+       :host(:focus) #input,
+       :host(:hover) #input,
+       #input:hover,
+       #input:focus,
+       input:focus,
+       input:hover {
+         border-style: var(--input-focus-border-style, dotted);
+         border-color: var(--input-focus-border-color, rgba(0,0,0,0.5));
+       }
+
       :host(:focus) #input,
       :host(:hover) #input,
       #input:hover,
-      #input:focus {
-        color: var(--input-focus-color, inherit);
-        background: var(--input-focus-background, rgba(0,0,0,0.1));
+      #input:focus,
+      button:focus,
+      button:hover,
+      select:focus,
+      select:hover,
+      input:focus,
+      input:hover {
         border-width: var(--input-border-width, thin);
-        border-style: var(--input-focus-border-style, dotted);
-        border-color: var(--input-focus-border-color, currentColor);
+        color: var(--input-focus-color, inherit);
+        background-color: var(--input-focus-background, rgba(0,0,0,0.1));
         outline: none;
         @apply --input-focus;
       }
-      /** will be ignored by IE **/
-      #input:focus-within {
-        color: var(--input-focus-color, inherit);
-        background: var(--input-focus-background, rgba(0,0,0,0.1));
-        border-width: var(--input-border-width, thin);
-        border-style: var(--input-focus-border-style, dotted);
-        border-color: var(--input-focus-border-color, currentColor);
+
+      select:focus option,
+      select option {
+        color: var(--input-color);
+        background: var(--input-background);
         outline: none;
-        @apply --input-focus;
+        font-family: inherit;
+        font-size: inherit;
+        font-weight: inherit;
+      }
+
+      /**
+       * invalid
+       */
+      :host([invalid]) #input,
+      :host([invalid]:hover) #input,
+      :host([invalid]:focus) #input,
+      #input:invalid:hover,
+      #input:invalid:focus,
+      #input:invalid {
+        color: var(--input-invalid-color, inherit);
+        background-color: var(--input-invalid-background, rgba(255,0,0,0.25));
+        border-width: var(--input-border-width, thin);
+        border-style: var(--input-invalid-border-style, dotted);
+        @apply --input-invalid;
       }
       :host([invalid]) #input,
       #input:invalid {
-        color: var(--input-invalid-color, inherit);
-        background: var(--input-invalid-background, rgba(255,0,0,0.1));
-        border-width: var(--input-border-width, thin);
-        border-style: var(--input-invalid-border-style, dotted);
         border-color: var(--input-invalid-border-color, rgba(255,0,0,0.5));
-        @apply --input-invalid;
       }
-      :host([invalid]) #input:hover,
-      :host([invalid]) #input:focus,
-      #input:invalid:focus,
+      :host([invalid]:hover) #input,
+      :host([invalid]:focus) #input,
+      #input:invalid:hover,
       #input:invalid:focus {
-        border-width: var(--input-border-width, thin);
-        border-style: var(--input-focus-border-style, dotted);
-        border-color: var(--input-focus-border-color, currentColor);
+        border-color: var(--input-focus-border-color, rgba(255,0,0,1));
       }
+
+      /**
+       * inner inputs
+       */
+      #input integer-input,
+      #input number-input,
+      #input text-input {
+        --input-color: var(--inner-input-color, currentColor);
+        --input-background: var(--inner-input-background, transparent);
+        --input-border-width: var(--inner-input-border-width, thin);
+        --input-border-color: var(--inner-input-border-color, transparent);
+        --input-border-style: var(--inner-input-border-style, dotted);
+        --input-padding: var(--inner-input-padding, 0);
+        --input-border-radius: var(--inner-input-border-radius, 0.1em);
+        --input-focus-color: var(--inner-input-focus-color, currentColor);
+        --input-focus-background: var(--inner-input-focus-background, rgba(0,0,0,0.1));
+        --input-focus-border-color: var(--inner-input-focus-border-color, rgba(0,0,0,0.1));
+        --input-focus-border-style: var(--inner-input-focus-border-style, dotted);
+        --input-invalid-background: var(--inner-input-invalid-background, rgba(0,0,0,0.1));
+        --input-invalid-border-style: var(--inner-input-invalid-border-style, dotted);
+        --input-invalid-border-color: var(--inner-input-invalid-border-color, rgba(0,0,0,0.25));
+      }
+
+      /**
+       * disabled
+       */
       :host([disabled]) #input {
         color: var(--input-disabled-color, inherit);
-        background: var(--input-disabled-background, transparent);
+        background-color: var(--input-disabled-background, transparent);
         font-style: var(--input-disabled-font-style, oblique);
         opacity: var(--input-disabled-opacity, 0.9);
         @apply --input-disabled;
         pointer-events: none;
       }
+
+      /**
+       * placeholder
+       */
       ::-webkit-input-placeholder,
       ::placeholder {
         color: var(--input-placeholder-color, inherit);
@@ -93,22 +175,34 @@
         text-align: var(--input-placeholder-align, center);
         @apply --input-placeholder;
       }
+      :host([invalid]) ::-webkit-input-placeholder,
+      :host([invalid]) ::placeholder {
+        color: var(--input-invalid-color, inherit);
+      }
+
+      /**
+       * selection
+       */
       ::-moz-selection {
         color: inherit;
-        background: transparent;
+        background-color: transparent;
       }
       :focus::-moz-selection {
         color: var(--input-selection-color, inherit);
-        background: var(--input-selection-background, rgba(255,255,255,0.5));
+        background-color: var(--input-selection-background, rgba(255,255,255,0.5));
       }
       ::selection {
         color: inherit;
-        background: transparent;
+        background-color: transparent;
       }
       :focus::selection {
         color: var(--input-selection-color, inherit);
-        background: var(--input-selection-background, rgba(255,255,255,0.5));
+        background-color: var(--input-selection-background, rgba(255,255,255,0.5));
       }
+
+      /**
+       * browser specific style fixes
+       */
       ::-moz-focus-inner {
         border-width: 0;
         border-style: none;
@@ -120,9 +214,25 @@
         color: transparent !important;
         text-shadow: 0 0 0 var(--input-focus-color, #000);
       }
-      [hidden] {
-        display: none !important;
+
+      select:focus::-ms-value {
+        background: transparent;
       }
+
+      select::-ms-expand {
+        display: none;
+      }
+
+      ::-webkit-input-edit-text,
+      ::-webkit-input-placeholder,
+      ::-webkit-inner-spin-button,
+      ::-webkit-outer-spin-button,
+      ::-webkit-search-cancel-button,
+      ::-webkit-clear-button {
+        color: currentColor;
+        cursor: pointer;
+      }
+
     </style>
   </template>
 
